fix z-index

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -7,9 +7,11 @@ body {
 app-header-view {
     position: fixed;
     width: 100%;
+    z-index: 100;
 }
 .child {
     position: absolute;
+    width: 100%;
+    height: calc(100vh - 70px);
     margin-top: 70px;
-    z-index: -1;
 }
